--- a/kitty.css
+++ b/kitty.css
@@ -2,14 +2,14 @@
 @media screen and (min-width: 250px) {
     body {
 
-        content: url(images/kitten-small.png);
+        content: url(kitten-small.png);
         
     }
 }
 @media screen and (min-width: 500px) {
     body {
         
-        content: url(images/kitten-medium.png);
+        content: url(kitten-medium.png);
         
     }
 }
@@ -17,6 +17,6 @@
 @media screen and (min-width: 800px) {
     body {
         
-        content: url(images/kitten-large.png);
+        content: url(kitten-large.png);
         
     }
